Use rb_error_frozen_object in rb_class_modify_check

This provides information on the class of the frozen object. It also
results in a much simpler implementation.

Fixes [Bug #21374]